<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/lginfo"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

   <TextView
        style="@style/label"
        android:layout_gravity="center"
        android:text="@string/name"
       />


    <EditText
        android:id="@+id/name"
        style="@style/fedit"
        />

   <TextView
        style="@style/label"
        android:layout_gravity="center"
        android:text="@string/location"
       />


    <EditText
        android:id="@+id/location"
        style="@style/fedit"
    />


   <TextView
        style="@style/label"
        android:layout_gravity="center"
        android:text="@string/sport"
       />


    <Button android:id="@+id/sport" style="@style/bspinner" 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
    />




    <Button android:id="@+id/create"
        style="@style/button"
        android:text="@string/create"
        android:onClick="onCreateLeague"
        />


</LinearLayout>

</ScrollView>