<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/login"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:textStyle="bold"
       android:textSize="20.0sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/enter_name"
       />


    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:hint="@string/user_name"
        android:background="@drawable/edit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="org"
        />


    <Button android:id="@+id/login"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="onLogin"
        android:layout_margin="10dp"
        >

    </Button>
<!--
   <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
-->



</LinearLayout>

